# 3DViewer

./: Doxyfile  Makefile
bl/: bl.cpp  bl.h  new_affine.cpp
controller/: controller.cpp  controller.h
qtgifimage/: dgif_lib.cpp  egif_lib.cpp  gif_err.cpp  gif_font.cpp  gif_hash.cpp  gif_hash.h  gif_lib.h  gif_lib_private.h  gifalloc.cpp  qgifglobal.h  qgifimage.cpp  qgifimage.h  qgifimage_p.h  quantize.cpp
test/: test.cpp  test.h
view/: CMakeLists.txt  CMakeUserPresets.json  TestOpenGLWidget.cpp  TestOpenGLWidget.h  main.cpp  ocolus.cpp  ocolus.h  ocolus.ui
